Got Swagger to display mongoose schemas properly
