# routes/swagger.js
@@ -1,12 +1,13 @@
 /**
  * Development Debug Routes
  */
-const router = require("express").Router();
+
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("../swagger.json");
+const router = require("express").Router();
 
-router.use("/api-docs", swaggerUi.serve);
-router.get("/api-docs", swaggerUi.setup(swaggerDocument));
+router.use('/', swaggerUi.serve);
+router.get('/', swaggerUi.setup(swaggerDocument));
 
 
 module.exports = router;
